Fast file open windows, find file improvements